--- a/Config.json
+++ b/Config.json
@@ -2,21 +2,21 @@
 	"skeletons":[
 		{
 			"name": "CyberSkeleton",
-			"path": "Skeletons\\CyberSkeleton\\CyberSkeleton.json"
+			"path": "Skeletons/CyberSkeleton/CyberSkeleton.json"
 		},
 		{
 			"name": "HumanSkeleton",
-			"path": "Skeletons\\HumanSkeleton\\HumanSkeleton.json"
+			"path": "Skeletons/HumanSkeleton/HumanSkeleton.json"
 		}
 	],
 	"nerves":[
 		{
 			"name": "CyberNerves",
-			"path": "Nerves\\CyberNerves\\CyberNerves.json"
+			"path": "Nerves/CyberNerves/CyberNerves.json"
 		},
 		{
 			"name": "HumanNerves",
-			"path": "Nerves\\HumanNerves\\HumanNerves.json"
+			"path": "Nerves/HumanNerves/HumanNerves.json"
 		}
 	]
 }
